# imshare

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
conf/nginx/: pikzcc.conf
imshare/: __main__.py  build.py  conf.py  export.py  gen_config.py  misc.py  template.py
state/: 404.md  footer.md  index.md  share_info.md
static/: main.js  style.css
