[tool.poetry]
name = "imshare"
version = "0.1.0"
description = "An image sharing platform"
authors = ["Anton Lydike <me@antonlydike.de>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
markdown = "^3.4.4"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
